# cnn-deployment-tensorflow

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  model.py  schemas.py
